samples/_failures_safe/1761506981_9f7d42_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a48b611.c: In function ‘main’:
./samples/SAFE/__tmp_9a48b611.c:128:12: error: missing terminating " character
  128 |     printf("Enter log entries
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9a48b611.c:128:5: error: expected expression at end of input
  128 |     printf("Enter log entries
      |     ^~~~~~
./samples/SAFE/__tmp_9a48b611.c:128:5: error: expected declaration or statement at end of input
